--- a/style.css
+++ b/style.css
@@ -68,7 +68,14 @@ main {
   font-weight: 400;
   line-height: 24px;
 }
-
+#currentWind {
+  color: #f65282;
+  font-weight: 900;
+}
+#currentHumidity {
+  color: #f65282;
+  font-weight: 900;
+}
 .current-details strong {
   color: #f65282;
 }
