--- a/style.css
+++ b/style.css
@@ -81,11 +81,11 @@ main {
 }
 
 .weatherAppIcon {
-  position: center;
+  position: relative;
   width: 125px;
-  padding-top: 8px;
+  padding-top: 15px;
   padding-bottom: 0;
-  margin-top: -15px;
+  margin-top: -20px;
 }
 
 .current-temperature-value {
