--- a/style.css
+++ b/style.css
@@ -49,12 +49,6 @@ main {
 
 .current-temperature {
   font-size: 48px;
-  display: inline;
-  position: relative;
-  width: 125px;
-  padding-top: 15px;
-  padding-bottom: 0;
-  margin-top: -20px;
 }
 
 .current-weather {
@@ -84,6 +78,16 @@ main {
 }
 .current-details strong {
   color: #f65282;
+}
+
+.weatherAppIcon {
+  display: inline;
+  position: relative;
+  width: 125px;
+  padding-top: 15px;
+  padding-bottom: 0;
+  margin-top: -20px;
+  margin-left: -10px;
 }
 
 .current-temperature-value {
