--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ main {
   position: relative;
   width: 125px;
   padding: 0px;
-  margin-left: -7px;
+  margin: 0;
 }
 
 .current-temperature-value {
